tests/snapshots/run_wpt_conformance__trtx_lstm_float16_tensors_steps_2_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lstm.https.any.js lstm float16 tensors steps=2 with all options, trtx
 Failed to build graph: graph conversion failed for trtx: Unsupported operation: lstm

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    lstmInitialCellState: f16[1, 2, 2];
    lstmInitialHiddenState: f16[1, 2, 2];
    lstmInput: f16[2, 2, 2];
  }

  consts {
    operand_0: f16[1, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_4: f16[1, 6] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);
    operand_5: f16[1, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_6: f16[1, 8, 2] @bytes([102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46]);
    operand_7: f16[1, 8, 2] @bytes([0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192]);
  }

  nodes {
    [lstmOutput1, lstmOutput2, lstmOutput3] = lstm(lstmInput, operand_7, operand_6, activations=["relu", "relu", "relu"], bias=0, direction="backward", initialCellState=1, initialHiddenState=2, label="", layout="iofg", peepholeWeight=4, recurrentBias=5, returnSequence=true);
  }

  outputs { lstmOutput1; lstmOutput2; lstmOutput3; }
}
