tests/snapshots/run_wpt_conformance__trtx_lstm_float16_tensors_steps_2_with_bidirections.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lstm.https.any.js",
    "lstm float16 tensors steps=2 with bidirections",
    "trtx",
    Failed {
        msg: Some(
            "Failed to convert graph: graph conversion failed for trtx: Unsupported operation: lstm\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    lstmInput: f16[2, 2, 2];\n  }\n\n  consts {\n    operand_0: f16[2, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);\n    operand_1: f16[2, 8, 2] @bytes([0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192]);\n    operand_3: f16[2, 8, 2] @bytes([102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46]);\n    operand_4: f16[2, 8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);\n  }\n\n  nodes {\n    [lstmOutput1, lstmOutput2, lstmOutput3] = lstm(lstmInput, operand_1, operand_3, activations=null, bias=4, direction=\"both\", initialCellState=null, initialHiddenState=null, label=\"\", layout=\"iofg\", peepholeWeight=null, recurrentBias=0, returnSequence=true);\n  }\n\n  outputs { lstmOutput1; lstmOutput2; lstmOutput3; }\n}\n",
        ),
    },
)
