tests/snapshots/run_wpt_conformance__trtx_matmul_float16_4D_and_3D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "matmul.https.any.js",
    "matmul float16 4D and 3D tensors",
    "trtx",
    "PASS",
)
